# pumpkin-scraper

./: .aspell.en.pws  .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  scrapy.cfg  tox.ini
.github/workflows/: ci.yml
pumpkin/: items.py  pipelines.py  settings.py
pumpkin/spiders/: spider.py
tests/: test_version.py
