[tool.poetry]
name = "pumpkin"
version = "0.1.0"
description = ""
authors = ["xofbd <dfox09@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
