[tool.poetry]
name = "pumpkin"
version = "0.2.1"
description = ""
authors = ["xofbd <dfox09@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
tox = "^3.24.5"
tox-gh-actions = "^2.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
